syntax = "proto3";

package block;
option go_package = "./proto";

import "mempool.proto";  // Import the mempool proto file

message Block {
  string hash = 1;
  string prev_hash = 2;
  string merkle_root = 3;
  int64 timestamp = 4;
  uint64 height = 5;
  uint64 nonce = 6;
  repeated mempool.Transaction transactions = 7;
}

message CreateBlockRequest {
  Block block = 1;
}

message CreateBlockResponse {
  string hash = 1;
  uint64 height = 2;
}

service BlockService {
  rpc CreateBlock(CreateBlockRequest) returns (CreateBlockResponse);
}
